Fix header line spacing on mobile
Add proper line-height (1.5em) to header text on mobile devices
to improve readability when text wraps.

--- a/style/style_domestica_summer.css
+++ b/style/style_domestica_summer.css
@@ -133,6 +133,7 @@ list-style:disc;
 		right:auto;
 		margin-top:0px;
 		padding:0;
+		line-height:1.5em;
 	}
 	.domestica header {
 		height:auto;
